修改分布式锁test方法

--- a/src/main/rescource/log4j.properties
+++ b/src/main/rescource/log4j.properties
@@ -4,7 +4,7 @@
 #
 #############################################
 
-log4j.rootLogger=INFO,tracer,error,console
+log4j.rootLogger=ERROR,tracer,error,console
 
 
 log4j.appender.tracer.Threshold=INFO
