--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
             <version>3.4.6</version>
         </dependency>
 
-        <dependency>
+  <!--      <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>commons-logging</groupId>
@@ -51,6 +51,15 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
         </plugins>
 
         <finalName>zookeeper</finalName>
